<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="hide">Hide</string>
    <string name="app_name">flash light</string>
    <string name="hello_world">Test your flash light</string>
    <string name="action_settings">Settings</string>
    <string name="flash_on">to turn on flash light</string>
    <string name="flash_off">to turn off flash light</string>

</resources>