<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vmordo.flashlite.FlashLiteActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:onClick="onClick"
        android:text="@string/flash_on" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1" >

        <Button
            android:id="@+id/btnPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickPhoto"
            android:text="@string/photo" >
        </Button>

        <Button
            android:id="@+id/btnVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPhoto"
            android:onClick="onClickVideo"
            android:text="@string/video" >
        </Button>

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnVideo"
            android:contentDescription="@string/video" >
        </ImageView>

        <Button
            android:id="@+id/btnHide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivPhoto"
            android:onClick="onClickHide"
            android:text="@string/hide" >
        </Button>

        <SurfaceView
            android:id="@+id/surfaceView"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_below="@+id/btnHide"
            android:layout_gravity="center"
            android:onClick="onClick" >
        </SurfaceView>
    </RelativeLayout>

</RelativeLayout>